add qzone shuoshuo

--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -29,6 +29,8 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">成长 <b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                    <li><a href="/book.html">书单</a></li>
+                    <li><a href="/note.html">笔记</a></li>
                     <li><a href="/method.html">方法论</a></li>
                     <!--<li><a href="/mind.html">心态</a></li>-->
                     <li><a href="/thinkask.html">思考与提问</a></li>
@@ -38,16 +40,6 @@
             </li>
 
             <li><a href="/career.html">职场&nbsp;</a></li>
-
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">创作 <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="/book.html">书单</a></li>
-                    <li><a href="/note.html">笔记</a></li>
-                    <li><a href="/essay.html">感想</a></li>
-                    <li><a href="/trash.html">废弃</a></li>
-                </ul>
-            </li>
 
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">交易 <b class="caret"></b></a>
@@ -65,7 +57,8 @@
                     <li><a href="/travel.html">旅行</a></li>
                     <li><a href="/photography.html">摄影</a></li>
                     <li><a href="/film.html">影评</a></li>
-
+                    <li><a href="/essay.html">感想</a></li>
+                    <li><a href="/trash.html">废弃</a></li>
                 </ul>
             </li>
 
@@ -77,8 +70,18 @@
                 </ul>
             </li>
 
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于 <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/about.html">关于我</a></li>
+                    <li><a href="/quotes.html">摘抄语录</a></li>
+                    <li><a href="/state.html">我的近况</a></li>
+                    <li><a href="/moodwords.html">心之絮语</a></li>
+                    <li><a href="/ana.html">个人语录</a></li>
+                    <li><a href="/resume.html">我的简历</a></li>
+                </ul>
+            </li>
             <li><a href="/archive.html">归档</a></li>
-            <li><a href="/about.html">关于</a></li>
 
             <!-- ADD SEARCH FORM HERE -->
             <script>
