--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -73,7 +73,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于 <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/about.html">关于我</a></li>
+                    <li><a href="/me.html">关于我</a></li>
                     <li><a href="/quotes.html">摘抄语录</a></li>
                     <li><a href="/state.html">我的近况</a></li>
                     <li><a href="/moodwords.html">心之絮语</a></li>
