--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -76,7 +76,7 @@
                     <li><a href="/me.html">关于我</a></li>
                     <li><a href="/quotes.html">摘抄语录</a></li>
                     <li><a href="/state.html">我的近况</a></li>
-                    <li><a href="/moodwords.html">心之絮语</a></li>
+                    <li><a href="/moodwords.html">心情</a></li>
                     <li><a href="/ana.html">个人语录</a></li>
                     <li><a href="/resume.html">我的简历</a></li>
                 </ul>
