--- a/_includes/share.html
+++ b/_includes/share.html
@@ -7,40 +7,40 @@
         <li>
             <a href="#" target="_blank" title="Share on Wechat">
                 <div id="qrcode"></div>
-                <img alt="Share on Wechat" src="http://3gods.com/public/img/share/WeChat.svg"/>
+                <img alt="Share on Wechat" src="https://3gods.com/public/img/share/WeChat.svg"/>
             </a>
         </li>
         &nbsp;
         <li>
-            <a href="http://service.weibo.com/share/share.php?url=http://3gods.com{{page.url}}&title={{page.title}}" target="_blank"
+            <a href="http://service.weibo.com/share/share.php?url=https://3gods.com{{page.url}}&title={{page.title}}" target="_blank"
                title="Share on Weibo">
-                <img alt="Share on Weibo" src="http://3gods.com/public/img/share/Weibo.svg"/>
+                <img alt="Share on Weibo" src="https://3gods.com/public/img/share/Weibo.svg"/>
             </a>
         </li>
         &nbsp;
-        <li><a href="https://plus.google.com/share?url=http://3gods.com{{page.url}}" target="_blank"
+        <li><a href="https://plus.google.com/share?url=https://3gods.com{{page.url}}" target="_blank"
                title="Share on Google+">
-            <img alt="Share on Google+" src="http://3gods.com/public/img/share/Google+.svg"/>
+            <img alt="Share on Google+" src="https://3gods.com/public/img/share/Google+.svg"/>
         </a>
         </li>
         &nbsp;
-        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url=http://3gods.com{{page.url}}&title={{page.title}}&source=http://3gods.com{{page.url}}"
+        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url=https://3gods.com{{page.url}}&title={{page.title}}&source=https://3gods.com{{page.url}}"
                target="_blank" title="Share on LinkedIn">
-            <img alt="Share on LinkedIn" src="http://3gods.com/public/img/share/LinkedIn.svg"/>
+            <img alt="Share on LinkedIn" src="https://3gods.com/public/img/share/LinkedIn.svg"/>
         </a>
         </li>
         &nbsp;
         <li>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=http://3gods.com{{page.url}}&t={{page.title}}"
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://3gods.com{{page.url}}&t={{page.title}}"
                title="Share on Facebook" target="_blank">
-                <img alt="Share on Facebook" src="http://3gods.com/public/img/share/Facebook.svg"/>
+                <img alt="Share on Facebook" src="https://3gods.com/public/img/share/Facebook.svg"/>
             </a>
         </li>
         &nbsp;
         <li>
-            <a href="https://twitter.com/intent/tweet?source=http://3gods.com{{page.url}}&text={{page.title}} http://3gods.com{{page.url}}"
+            <a href="https://twitter.com/intent/tweet?source=https://3gods.com{{page.url}}&text={{page.title}} https://3gods.com{{page.url}}"
                target="_blank" title="Tweet">
-                <img alt="Tweet" src="http://3gods.com/public/img/share/Twitter.svg"/>
+                <img alt="Tweet" src="https://3gods.com/public/img/share/Twitter.svg"/>
             </a>
         </li>
     </ul>
@@ -49,12 +49,12 @@
 
     <p style="font-size:18px;font-weight: bold">
         每个人的内心都渴望被他人认可，您的赞赏是对我的最大鼓励与支持<br>
-        <img alt="appreciate_ali" class="appreciate" src="http://3gods.com/public/img/appreciate_ali.png"/>
-        <img alt="appreciate_wx" class="appreciate" src="http://3gods.com/public/img/appreciate_wx.png"/>
+        <img alt="appreciate_ali" class="appreciate" src="https://3gods.com/public/img/appreciate_ali.png"/>
+        <img alt="appreciate_wx" class="appreciate" src="https://3gods.com/public/img/appreciate_wx.png"/>
     </p>
 
     <p style="font-size:18px;font-weight: bold">
         更多精彩干货，尽请关注我的个人微信公众号：禅与黑客<br>
-        <img alt="wechat" class="appreciate" src="http://3gods.com/public/img/wechat.jpg"/>
+        <img alt="wechat" class="appreciate" src="https://3gods.com/public/img/wechat.jpg"/>
     </p>
 </div>
