--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: base
     <div class="col-md-15 aside3-content col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
         <hr>
         <div id="content">
-            <p>本文：<a href="http://3gods.com{{page.url}}">{{page.title}}</a>，原创于：<a href="http://3gods.com">宋鑫的官方网站</a>，转载请注明出处，谢谢。</p>
+            <p>本文：<a href="https://3gods.com{{page.url}}">{{page.title}}</a>，原创于：<a href="https://3gods.com">宋鑫的官方网站</a>，转载请注明出处，谢谢。</p>
             {{ content }}
         </div>
         <hr>
