--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -78,7 +78,7 @@
                     <li><a href="/state.html">我的近况</a></li>
                     <li><a href="/moodwords.html">心情</a></li>
                     <li><a href="/ana.html">个人语录</a></li>
-                    <li><a href="/resume.html">我的简历</a></li>
+                    <li><a href="/resume.html">简历</a></li>
                 </ul>
             </li>
             <li><a href="/archive.html">归档</a></li>
