add comment add dubbo dynamic

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: base
     </div>
     <!-- 文章评论 -->
     <div class="col-md-15 aside3-content col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
-
+        {% include comment.html %}
     </div>
 
 
