--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -88,7 +88,7 @@
                 var domainroot="3gods.com"
                 function Gsitesearch(curobj){ curobj.q.value="site:"+domainroot+" "+curobj.qfront.value }
             </script>
-            <form class="search navbar-form navbar-right" action="http://www.google.com/search" method="get" role="search" onSubmit="Gsitesearch(this)" target="_blank">
+            <form class="search navbar-form navbar-right" action="https://www.google.com/search" method="get" role="search" onSubmit="Gsitesearch(this)" target="_blank">
                 <div class="input-group">
                     <input name="q" type="hidden" />
                     <input class="form-control" name="qfront" type="search" required class="searchField" placeholder="全站搜索" maxlength="50"/>
