--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,5 +15,5 @@
 <link rel="stylesheet" href="/public/js/prettify/prettify.css">
 <link rel="stylesheet" href="/public/css/base.css">
 <link href="/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
-
+<link rel="alternate" href="/" hreflang="x-default" />
 
