--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,3 +3,19 @@
 <script src="/public/js/jquery.pjax.js"></script>
 <script src="/public/js/prettify/prettify.js"></script>
 <script src="/public/js/base.js"></script>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Person",
+  "name": "宋鑫",
+  "url": "http://www.your-site.com",
+  "sameAs": [
+    "{{ site.author.github }}",
+    "{{ site.author.zhihu }}",
+    "{{ site.author.googleplus }}",
+    "{{ site.author.facebook }}",
+    "{{ site.author.twitter }}",
+    "{{ site.author.linkedin }}"
+  ]
+}
+</script>
