--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -73,11 +73,10 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于 <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/me.html">关于我</a></li>
-                    <li><a href="/quotes.html">摘抄语录</a></li>
-                    <li><a href="/state.html">我的近况</a></li>
                     <li><a href="/moodwords.html">心情</a></li>
-                    <li><a href="/ana.html">个人语录</a></li>
+                    <li><a href="/quote.html">语录</a></li>
+                    <li><a href="/me.html">关于我</a></li>
+                    <li><a href="/milestone.html">里程碑</a></li>
                     <li><a href="/resume.html">简历</a></li>
                 </ul>
             </li>
