--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: base
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">首页</a></li>
                 <li class="breadcrumb-item"><a href="/{{page.categories}}">{{page.categoryStr}}</a></li>
-                <li class="breadcrumb-item active" aria-current="page">{{page.title}}</li>
+                <li class="breadcrumb-item active" aria-current="page"><a href="/{{page.url}}">{{page.title}}</a></li>
             </ol>
         </nav>
     </div>
