--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1628,6 +1628,7 @@ pre code {
 .row {
     margin-left: -15px;
     margin-right: -15px;
+    margin-top:28px;
 }
 
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2,
@@ -4304,7 +4305,8 @@ select[multiple].input-group-sm > .input-group-addon, select[multiple].input-gro
 
 .navbar-fixed-top {
     top: 0;
-    border-width: 0 0 1px
+    border-width: 0 0 1px;
+    border-bottom: 3px solid;
 }
 
 .navbar-fixed-bottom {
@@ -4782,7 +4784,7 @@ select[multiple].input-group-sm > .input-group-addon, select[multiple].input-gro
     padding: 8px 30px 8px 0px;
     margin-bottom: 18px;
     list-style: none;
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
     border-radius: 4px;
     font-size: 16px;
 }
