--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
 {% if page.keywords %}
 <meta name="keywords" content="{{ page.keywords }}">
 {% endif %}
-<link rel="shortcut icon" href="{{ site.favicon }}" />
+<link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}"/>
+<link rel="mask-icon" href="{{site.faviconSvg}}" color="#000000">
+<link rel="fluid-icon" href="{{site.faviconImg}}" title="3gods.com">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="msvalidate.01" content="76B177235172097DAFF78A0C750658B1" />
 <meta name="google-site-verification" content="EFxjvG_Lr9IPWKciBX7zQW7M89gAV_x_eFjh2hPt2Y4" />
