--- a/_includes/header_title.html
+++ b/_includes/header_title.html
@@ -3,13 +3,15 @@
 {% if page.keywords %}
 <meta name="keywords" content="{{ page.keywords }}">
 {% endif %}
-<link rel="shortcut icon" href="{{ site.favicon }}" />
+<link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}"/>
+<link rel="mask-icon" href="{{site.faviconSvg}}" color="#000000">
+<link rel="fluid-icon" href="{{site.faviconImg}}" title="3gods.com">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="msvalidate.01" content="76B177235172097DAFF78A0C750658B1" />
 <meta name="google-site-verification" content="EFxjvG_Lr9IPWKciBX7zQW7M89gAV_x_eFjh2hPt2Y4" />
 <meta name="sogou_site_verification" content="0g3QdKGMGK"/>
 <meta name="360-site-verification" content="c94e3336c2f515d0285f3d18312ab981" />
-<meta name="baidu-site-verification" content="qhavLJ2ShD" />
+<meta name="baidu-site-verification" content="gP0ZZIXso0" />
 <link rel="stylesheet" href="/public/css/bootstrap.css">
 <link rel="stylesheet" href="/public/css/font-awesome.css">
 <link rel="stylesheet" href="/public/js/prettify/prettify.css">
