--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: base
 <div class="row">
   <div class="col-md-13 aside3-title">
     <br>
-    <h2 id="#identifier">{{ page.titlename }}</h2>
+    <h2 id="#identifier">{{ page.title }}</h2>
   </div>
   <div class="aside3-content col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
     <div id="page-content">
