--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -89,8 +89,12 @@
             <form class="search navbar-form navbar-right" action="https://www.google.com/search" method="get" role="search" onSubmit="Gsitesearch(this)" target="_blank">
                 <div class="input-group">
                     <input name="q" type="hidden" />
-                    <input class="form-control" name="qfront" type="search" required class="searchField" placeholder="全站搜索" maxlength="50"/>
-                    <span class="input-group-btn"> <button type="submit" class="search-button btn btn-primary"> <i class="fa fa-search fa-lg"></i></button> </span>
+                    <input class="form-control searchField" name="qfront" type="search" required placeholder="全站搜索" maxlength="50"/>
+                    <span class="input-group-btn">
+                        <button type="submit" class="search-button btn btn-primary">
+                            <i class="fa fa-search fa-lg"></i>
+                        </button>
+                    </span>
                 </div>
             </form>
         </ul>
