--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,8 @@ layout: base
 
     <!-- 文章内容 -->
     <div class="col-md-15 aside3-content col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
-        <hr>
-        <div id="content">
+
+        <div>
             {{ content }}
         </div>
         <hr>
