--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -74,4 +74,7 @@
 	<style type="text/css">{{ page.style }}</style>
 	{% endunless %}
 
+    <script async src="https://just-comments.com/w.js"></script>
+
     {% include _baiduanalytics.html %}
+
