--- a/_includes/_footer_scripts.html
+++ b/_includes/_footer_scripts.html
@@ -1,6 +1,6 @@
 {% if page.mediaplayer == true %}
-<script src="{{ url }}/assets/jquery.min.js"></script>
-<script src="{{ url }}/assets/mediaelement_js/mediaelement-and-player.min.js"></script>
+<script src="{{ url }}/assets/js/jquery.min.js"></script>
+<script src="{{ url }}/assets/js/mediaelement_js/mediaelement-and-player.min.js"></script>
 <script>
 $('audio,video').mediaelementplayer();
 </script>
